objects/recordval__rv2Job__c.object
<CustomObject>
    <fields>
        <fullName>recordval__Amber__c</fullName>
        <label>Amber</label>
        <summarizedField>recordval__rv2JobResult__c.recordval__Amber__c</summarizedField>
        <summaryFilterItems>
            <field>recordval__rv2JobResult__c.recordval__Handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>recordval__rv2JobResult__c.recordval__rv2Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>recordval__ApexJobResult__c</fullName>
        <label>Apex Job Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__ApexJobStatus__c</fullName>
        <label>Apex Job Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__ApexJob__c</fullName>
        <label>Apex Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__ApexStage__c</fullName>
        <label>Apex Stage</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__Black__c</fullName>
        <label>Amber</label>
        <summarizedField>recordval__rv2JobResult__c.recordval__Black__c</summarizedField>
        <summaryFilterItems>
            <field>recordval__rv2JobResult__c.recordval__Handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>recordval__rv2JobResult__c.recordval__rv2Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>recordval__Config__c</fullName>
        <label>Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>recordval__Ended__c</fullName>
        <label>Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>recordval__Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__Filter__c</fullName>
        <label>Filter</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>recordval__Green__c</fullName>
        <label>Green</label>
        <summarizedField>recordval__rv2JobResult__c.recordval__Green__c</summarizedField>
        <summaryFilterItems>
            <field>recordval__rv2JobResult__c.recordval__Handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>recordval__rv2JobResult__c.recordval__rv2Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>recordval__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Job</label>
        <referenceTo>recordval__rv2Job__c</referenceTo>
        <relationshipLabel>Main job</relationshipLabel>
        <relationshipName>parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>recordval__Prefix__c</fullName>
        <label>Prefix</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__RecordCount__c</fullName>
        <label>Record Count</label>
        <summaryFilterItems>
            <field>recordval__rv2JobResult__c.recordval__Handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>recordval__rv2JobResult__c.recordval__rv2Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>recordval__Red__c</fullName>
        <label>Red</label>
        <summarizedField>recordval__rv2JobResult__c.recordval__Red__c</summarizedField>
        <summaryFilterItems>
            <field>recordval__rv2JobResult__c.recordval__Handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>recordval__rv2JobResult__c.recordval__rv2Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>recordval__Report__c</fullName>
        <label>Report</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>recordval__Services__c</fullName>
        <label>Services</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>recordval__Started__c</fullName>
        <label>Started</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>recordval__StatusFilter__c</fullName>
        <label>Status Filter</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>CHANGED</fullName>
                </value>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>AMBER</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
                <value>
                    <fullName>MANUAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>recordval__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Holding</fullName>
                    <default>true</default>
                    <label>Holding</label>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Deleting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>recordval__ValidationCount__c</fullName>
        <label>Validation Count</label>
        <summarizedField>recordval__rv2JobResult__c.recordval__ValidationCount__c</summarizedField>
        <summaryFilterItems>
            <field>recordval__rv2JobResult__c.recordval__Handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>recordval__rv2JobResult__c.recordval__rv2Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>recordval__ValidationRequestCount__c</fullName>
        <label>Validation Count</label>
        <summarizedField>recordval__rv2JobResult__c.recordval__ValidationRequestCount__c</summarizedField>
        <summaryFilterItems>
            <field>recordval__rv2JobResult__c.recordval__Handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>recordval__rv2JobResult__c.recordval__rv2Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>RV Job</label>
    <nameField>
        <displayFormat>rvjob{000000}</displayFormat>
        <label>RV Job</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RV Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>